2013-09-10  Giuseppe Scrivano  <gscrivano@gnu.org>

	* http.c (REGISTER_PERSISTENT_CONNECTION): Close connection if not
	persistent
	(gethttp): Register persistent connection if keep-alive, else Close
	connection instead of simply closing connection

2013-09-06  Darshit Shah  <darnir@gmail.com>

	* main.c (option_data[]): Change option to metalink-file in accordance
	with the information in the documentation

2013-07-12  Giuseppe Scrivano  <gscrivano@gnu.org>

	* utils.c (run_with_timeout): abort when there are more threads.

2013-07-16  Darshit Shah  <darnir@gmail.com>

	* wget.h (err_t): Added new errors, ATTRMISSING and UNKNOWNATTR to
	handle missing attributes and Unknown attribute values respectively in
	HTTP Headers.
	* exits.c (get_status_for_err): ATTRMISSING is a Protocol Error while
	UNKNOWNATTR is a general error, presumably because of a feature that
	is not yet implemented.
	* http.c (gethttp): Call create_authorization_line () separately. In
	case the auth_err flag has been set with an error, handle it and exit.
	* http.c (create_authorization_line): Pass a pointer, auth_err to set
	the flag for different kinds of errors encountered.
	* http.c (http_loop): Handle the errors raised by the authentication
	handlers.
	* http.c (digest_authentication_encode): Pass pointer auth_err to set
	the error flags.
	Set qop to NULL in case the value of the qop / algorithm attribute is
	unknown to Wget. Set an	appropriate error too.

2013-07-13  Tim Ruehsen  <tim.ruehsen@gmx.de>

	* http.c (digest_authentication_encode): Fix a crash when the algorithm
	is not specified in the server response.  Free dynamic memory used by
	the function when the function exits.
	* http-ntlm.c [HAVE_NETTLE]: Include <nettle/md4.h> and <nettle/des.h>.
	(setup_des_key) [HAVE_NETTLE]: New function to deal with
	libnettle.
	(calc_resp) [HAVE_NETTLE]: Add support for libnettle.
	(mkhash) [HAVE_NETTLE]: Likewise.
	Reported by: Tim Ruehsen  <tim.ruehsen@gmx.de>.
